<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Open Trains</string>
    <string name="action_about">About MozStumbler</string>
    <string name="action_preferences">Settings</string>
    <string name="hasadna_title">Hasadna</string>
    <string name="view_leaderboard">View Leaderboard</string>
    <string name="view_map">Test Mozilla Location Service</string>
    <string name="service_name">Open Trains</string>
    
    <string name="last_train">Last on Train: %1$s</string>
    <string name="wifi_access_points">Wi-Fi Access Points Scanned: %1$d</string>
    <string name="gps_satellites">GPS Satellites Visible: %1$d</string>
    <string name="locations_scanned">Locations Scanned: %1$d</string>
    <string name="last_upload_time">Last Report: %1$s</string>
    <string name="reports_sent">Reports Sent: %1$d</string>
    <string name="service_scanning">Open Trains Online</string>
    
    <string name="enter_nickname">Enter Nickname (optional)</string>
    <string name="enter_nickname_title">Nickname: </string>
    <string name="enter_nickname_longtext">Your nickname will appear on the leaderboard</string>

    <string name="battery_low_warning">Battery low, MozStumbler will stop scanning</string>

    <string name="update_title">Download MozStumbler Update?</string>
    <string name="update_message">Installed version: %1$s\nLatest version: %2$s</string>
    <string name="update_now">Update Now</string>
    <string name="update_later">Update Later</string>

    <string name="location_not_found">Location not found</string>

    <string name="gps_alert_msg">GPS is turned off. Do you want to go to settings and turn it on?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="about_version">Version %1$s</string>
    <string name="status_off">Click the button to engage. The app will only ever do work if Israel Railways Wi-Fi hotspots are observed.</string>
    <string name="status_on">Engaged. Will report what Wifi Hotspots are around the device, but only if Israel Railways hotspots have recently been observed.</string>
    <string name="radar_image_desc">Image of radar screen</string>
    <string name="notification_close">Stop scannig</string>
    <string name="alert_dialog_confirm_exit">Stop scannig before exit?</string>
    <string name="alert_dialog_ok">Yes</string>
    <string name="alert_dialog_cancel">No</string>
    
    <string name="privacy_policy_menu_item">Privacy policy</string>
     <string name="privacy_policy_title">Privacy policy</string>
     <string name="privacy_policy_text">
         רכבת פתוחה היא פרויקט של הסדנא לידע ציבורי.
בסדנא לידע ציבורי אנו מעריכים את פרטיותך ולכן ניסחנו את מדיניות הפרטיות הזו על מנת להודיע לך מתי מידע נשמר, כיצד הוא מעובד ומה מגולה לגופים אחרים. למרות שהסדנא לידע ציבורי אינה גוף אמריקאי, מדיניות הפרטיות מותאמת להנחיות משרד הייצוא האמריקאי וכן מתאימה לדרישות החוק הישראלי והדירקטיבה האירופית. 
<b>איזה מידע מזוהה אנו שומרים על אודותייך? </b>
אנו שומרים מידע מזוהה על אודותייך, לרבות מיקום (GPS), כתובת IP, ומידע נוסף אשר תספק לנו מעת לעת. כמו כן, בעת השימוש במכשיר הסלולרי שלך, אנו מייצרים מזהה יומי חד-ערכי שמאפשר לזהות אותך. מזהה זה מוגרל מדי יום, ולא ניתן להשוואה מול מספר הטלפון שלך או מידע אחר למעט נתוני המיקום. 
<b>איזה מידע לא מזהה אנו שומרים על אודותייך? </b>
אנו שומרים גם מידע שאינו מזהה אישית המבוסס על פעילויותייך, כגון: השימוש שלך בשירותים, המיקום המקורב שלך, ומידע נוסף שאנו נקבל ממך, בתנאי שיידענו אותך במפורט על איסוף או שמירה כאלו. 
<b>איך אנו מעבדים מידע על אודותייך? </b>
אנו נעבד את המידע שיעבור באמצעות השירות ונשתמש בו בהתאם לבקשותייך, אנו גם מעבדים הן מידע אישי והן מידע לא אישי לידי מידע מצטבר שאינו מזהה אישית, משתמשים במידע בצורה מצטברת כדי ליידע את המשתמשים האחרים על אודות זמני הרבבת וכאשר אנו עשויים לעבד את המידע בדרכים נוספות אשר נודיע לך. 
<b>האם אנו שומרים עוגיות בשירות? </b>
עוגיה היא קובץ הנשמר על המחשב שלך והמאפשר לאתר האינטרנט לזהות אותך או לאמת את זהותך. השירות שלנו לא משתמש בעוגיות. 
<b>למי עוד יש גישה למידע? </b>
המידע נגיש בצורה מצטברת ולא-מזהה לשאר משתמשי השירות. אנו עשויים לאפשר לצדדים שלישיים לגשת למידע באמצעות API, כאשר גם הם יוכלו לקבל מידע שאינו מזהה אישית. 
<b>כיצד אנו נצור עמך קשר? </b>
אנו לעולם לא נצור עמך קשר או נספק את כתובת הדואר שלך לאף אחד אחר, אנו עשויים לצור עמך קשר אם אנו מרגישים שהחשבון שלך נפרץ או מסיבות הקשורות לשירות. 
<b>האם אתה יכול לשנות או למחוק את המידע? </b>
אנו מכבדים את פרטיותך ואתה תמיד יכול להשתמש במערכת הניהול שלנו לעיין ולתקן כל מידע אישי או להסיר אותו, אם הדבר דרוש, אתה מוזמן לצור עמנו קשר לכל שאלה נוספת. 
<b>כיצד עלייך לפעול אם אתה מרגיש שפרטיותך נפגעה?</b>
אם אתה מרגיש שפרטיותך נפגעה, אתה תמיד יכול צור קשר עם קצין הפרטיות שלנו, בדואר אלקטרוני או על ידי טופס -צור קשר- והגש תלונה, קצין הפרטיות שלנו יבחן את התלונות בזמן סביר וישלח לך את התשובה בהקדם, קצין הפרטיות שלנו אף מפרסם דוחות מעת לעת על אותן תלונות, שתוכל למצוא באתרנו, . כתובת הדואר האלקטרוני של קצין הפרטיות היא:
<u>greenofer@gmail.com</u>

    </string>
    
</resources>
