<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1.0"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">

        <TextView
            android:id="@+id/status_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:lines="2"
            android:text="@string/status_on"
            android:textColor="#ff4d4d4d"
            android:textSize="24sp" />

        <Button
            android:id="@+id/toggle_scanning"
            android:layout_width="180dp"
            android:layout_height="58dp"
            android:layout_below="@id/status_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:background="@drawable/switch_on"
            android:onClick="onClick_ToggleScanning" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:background="#ffe6e6e6">

        <LinearLayout
            android:id="@+id/info1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toggle_scanning"
            android:layout_marginTop="30.0dip"
            android:background="#ffe6e6e6"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/last_train"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="1"
                    android:text="--"
                    android:textColor="#ff4d4d4d"
                    android:textSize="35.0sp" />

                <TextView
                    android:id="@+id/last_train"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/last_train"
                    android:textColor="#ff666666"
                    android:textSize="15.0sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/last_upload_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="1"
                    android:text="--"
                    android:textColor="#ff4d4d4d"
                    android:textSize="35.0sp" />

                <TextView
                    android:id="@+id/last_upload_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/last_upload_time"
                    android:textColor="#ff666666"
                    android:textSize="15.0sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/info1"
            android:layout_marginTop="40.0dip"
            android:background="#ffe6e6e6"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/reports_sent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="1"
                    android:text="0"
                    android:textColor="#ff4d4d4d"
                    android:textSize="35.0sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/reports_sent"
                    android:textColor="#ff666666"
                    android:textSize="15.0sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/station_name_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="1"
                    android:text="--"
                    android:textColor="#ff4d4d4d"
                    android:textSize="35.0sp" />

                <TextView
                    android:id="@+id/station_name_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/station_name"
                    android:textColor="#ff666666"
                    android:textSize="15.0sp" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>